--- a/KaraokePayment/KaraokePayment/Views/BookPhongOrders/Details.cshtml
+++ b/KaraokePayment/KaraokePayment/Views/BookPhongOrders/Details.cshtml
@@ -50,10 +50,10 @@
                                         @Html.DisplayFor(model => model.KhachHang.Id)
                                     </dd>
                                     <dt class="col-sm-2">
-                                        @Html.DisplayNameFor(model => model.NhanVienCaLV)
+                                        @Html.DisplayNameFor(model => model.NhanVienAdminEmail)
                                     </dt>
                                     <dd class="col-sm-10">
-                                        @Html.DisplayFor(model => model.NhanVienCaLV.Id)
+                                        @Html.DisplayFor(model => model.NhanVienAdminEmail)
                                     </dd>
                                 </dl>
                             </div>
