--- a/KaraokePayment/KaraokePayment/Views/Phongs/GetPhongDaBook.cshtml
+++ b/KaraokePayment/KaraokePayment/Views/Phongs/GetPhongDaBook.cshtml
@@ -1,5 +1,5 @@
 ﻿@model System.Collections.Generic.List<KaraokePayment.Data.Entity.Phong>
-
+@using KaraokePayment.Helpers
 @{
     ViewBag.Title = "title";
     Layout = "_Layout";
@@ -47,13 +47,13 @@
                                                 @Html.DisplayFor(modelItem => item.TenPhong)
                                             </td>
                                             <td>
-                                                @Html.DisplayFor(modelItem => item.CoPhong)
+                                                @item.CoPhong.FirstCharToUpper()
                                             </td>
                                             <td>
                                                 @Html.DisplayFor(modelItem => item.IsVIP)
                                             </td>
                                             <td>
-                                                @Html.DisplayFor(modelItem => item.Gia)
+                                                @PaymentHelper.ConvertCurrency(item.Gia)                                                
                                             </td>
                                             <td>
                                                 @Html.DisplayFor(modelItem => item.TrangThai)
